[package]
name = "asrtemplate"
version = "0.1.0"
authors = ["Saing Sab <saing.sab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

#Chaing the bellow binary name according to your project
[[bin]]
path = "src/main.rs"
name = "asrtemplate"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
reqwest = "0.11.0"
